Update templates with class (to improve?)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-split-pane>
     <ion-menu menuId="mainMenu">
       <ion-header>
-        <ion-toolbar padding color="home">
+        <ion-toolbar class="ion-padding" color="home">
           <img src="./assets/img/s.png" height="28" />
           <ion-title class="menu-title">Stud.UCLouvain</ion-title>
         </ion-toolbar>
