--- a/src/app/pages/credit/credit.html
+++ b/src/app/pages/credit/credit.html
@@ -31,7 +31,7 @@
 </ion-header>
 
 <!--BODY-->
-<ion-content padding>
+<ion-content class="ion-padding">
   <!--Get text from assets from en.json or fr.json-->
   <div item-content>
     <p> Version {{version}} </p>
