--- a/src/app/pages/restaurant/restaurant.html
+++ b/src/app/pages/restaurant/restaurant.html
@@ -33,7 +33,7 @@
 </ion-header>
 
 <!--BODY-->
-<ion-content padding>
+<ion-content class="ion-padding">
   <p>{{'REST.TXT1' | translate}}
     {{'REST.TXT2' | translate}}</p>
 
