--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -30,7 +30,7 @@
 </ion-header>
 
 <!--BODY-->
-<ion-content padding>
+<ion-content class="ion-padding">
     <ion-card>
         <ion-card-header>
             <ion-row>
