--- a/src/app/pages/studies/exam/exam.html
+++ b/src/app/pages/studies/exam/exam.html
@@ -33,6 +33,6 @@
 </ion-header>
 
 <!--BODY-->
-<ion-content padding #weekContent>
+<ion-content class="ion-padding" #weekContent>
 
 </ion-content>
