Review template and useless return 'OK' :D

--- a/src/app/pages/studies/studies.html
+++ b/src/app/pages/studies/studies.html
@@ -21,6 +21,8 @@
 
 -->
 <!--EN-TETE-->
+
+<!--TODO: TO SPLIT-->
 <ion-header>
     <ion-toolbar color="uclouvain">
         <ion-buttons slot="start">
