--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,19 @@
         <ion-list scroll=true>
           <ion-item button *ngFor="let p of campusPages" (click)="openRootPage(p)">
             <ion-label>
-              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span>&nbsp; {{p.title | translate}}</span>
+              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span> {{p.title | translate}}</span>
               </div>
             </ion-label>
           </ion-item>
           <ion-item button *ngFor="let p of studiePages" (click)="openRootPage(p)">
             <ion-label>
-              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span>&nbsp; {{p.title | translate}}</span>
+              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span> {{p.title | translate}}</span>
               </div>
             </ion-label>
           </ion-item>
           <ion-item button *ngFor="let p of toolPages" (click)="openRootPage(p)">
             <ion-label>
-              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span>&nbsp; {{p.title | translate}}</span>
+              <div class="box"><img src={{p.icon}} width="35" height="35"  alt="Pictogramme"/> <span> {{p.title | translate}}</span>
               </div>
             </ion-label>
           </ion-item>
