--- a/src/app/pages/events/events-details/events-details.html
+++ b/src/app/pages/events/events-details/events-details.html
@@ -20,7 +20,7 @@
 -->
 <!--EN-TETE-->
 <ion-header>
-  <ion-toolbar color="event" secondary>
+    <ion-toolbar color="event">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -31,7 +31,7 @@
 <!--BODY-->
 <ion-content>
   <ion-card>
-    <img src="{{event.image}}" />
+      <img src="{{event.image}}" alt="Events picture"/>
     <ion-card-content>
       <ion-card-title>
         {{event.title}}
@@ -39,7 +39,7 @@
       <p [innerHTML]="event.description"></p>
     </ion-card-content>
     <ion-row>
-      <ion-col text-right>
+        <ion-col class="ion-text-right">
         <ion-button fill="clear" size="small" (click)="addFavorite(event)">
           <ion-icon slot="start" name='star'></ion-icon>
           {{'EVENTS.FAV' | translate}}
