--- a/src/app/events/pages/events-details/events-details.html
+++ b/src/app/events/pages/events-details/events-details.html
@@ -45,7 +45,7 @@
           {{'EVENTS.FAV' | translate}}
         </ion-button>
       </ion-col>
-      <ion-col text-right>
+        <ion-col class="ion-text-right">
         <ion-button fill="clear" size="small" (click)="openPage(event.link)">
           <ion-icon slot="start" name='share-alt'></ion-icon>
           {{'EVENTS.SITE' | translate}}
