Clean libdetails template

--- a/src/app/libraries/pages/library-details/library-details.html
+++ b/src/app/libraries/pages/library-details/library-details.html
@@ -34,7 +34,6 @@
     </ion-toolbar>
 </ion-header>
 
-<!--BODY-->
 <ion-content class="ion-padding">
     <ion-card>
         <ion-card-content>
@@ -45,16 +44,9 @@
         </ion-card-content>
 
         <ion-row class="ion-text-wrap">
-            <ion-col class="ion-text-right">
-            </ion-col>
-            <ion-col class="ion-text-right">
-            </ion-col>
-        </ion-row>
-
-        <ion-row class="ion-text-wrap">
             <ion-item class="ion-text-wrap">
                 <ion-label>
-                    <ion-icon name="call" slot="start"></ion-icon> &nbsp;
+                    <ion-icon name="call" slot="start"></ion-icon>
                     <a href="tel:{{libDetails.phone}}">{{libDetails.phone}}</a>
                 </ion-label>
             </ion-item>
